fix: adjust logo animation in home screen

--- a/template/package.json
+++ b/template/package.json
@@ -30,7 +30,9 @@
     "@types/react-native": "^0.66.4",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/styled-components": "^5.1.15",
     "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
