--- a/template/package.json
+++ b/template/package.json
@@ -10,33 +10,22 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.11",
-    "@react-navigation/native": "^6.0.6",
-    "native-base": "^3.2.2",
     "react": "17.0.2",
-    "react-native": "0.66.3",
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^2.2.4",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.9.0",
-    "react-native-svg": "^12.1.1",
-    "styled-components": "^5.3.3"
+    "react-native": "0.68.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.66.4",
-    "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-native": "^0.67.3",
     "@types/react-test-renderer": "^17.0.1",
-    "@types/styled-components": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "babel-jest": "^26.6.3",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^7.14.0",
+    "eslint": "^7.32.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.2",
-    "react-native-dotenv": "^3.3.0",
+    "metro-react-native-babel-preset": "^0.67.0",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
   },
