--- a/template/package.json
+++ b/template/package.json
@@ -7,19 +7,46 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "test:coverage": "jest  --coverage --watchAll=false",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.2",
+    "@hookform/resolvers": "^2.8.8",
+    "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.1",
+    "appcenter": "4.4.3",
+    "appcenter-analytics": "4.4.3",
+    "appcenter-crashes": "4.4.3",
+    "axios": "^0.26.1",
+    "luxon": "^2.3.1",
+    "patch-package": "^6.4.7",
+    "react-hook-form": "^7.29.0",
+    "react-native-device-info": "^8.7.1",
+    "react-native-element-dropdown": "^1.8.10",
+    "react-native-mask-text": "^0.7.0",
+    "react-native-paper": "^4.12.0",
+    "react-native-svg": "^12.3.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-vector-icons": "9.1.0",
+    "styled-components": "^5.3.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.67.3",
+    "@testing-library/jest-native": "^4.0.4",
+    "@testing-library/react-hooks": "^8.0.0",
+    "@testing-library/react-native": "^9.1.0",
+    "@types/jest": "^27.4.1",
+    "@types/luxon": "^2.3.1",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/react-native": "^0.67.3",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "babel-jest": "^26.6.3",
@@ -27,20 +54,15 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "eslint-plugin-prefer-arrow-functions": "^3.1.4",
+    "jest-mock": "^27.5.1",
+    "jest-styled-components": "^7.0.8",
+    "mock-async-storage": "^2.2.0",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-bootsplash": "^4.1.4"
   },
   "resolutions": {
     "@types/react": "^17"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
   }
 }
