feat: create assets folder

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,7 +9,7 @@
 		"esbenp.prettier-vscode",
 		"dsznajder.es7-react-js-snippets",
 		"equimper.react-native-react-redux",
-		"jpoissonnier.vscode-styled-components",
+		"styled-components.vscode-styled-components",
 		"msjsdiag.vscode-react-native",
 		"jock.svg",
 		"jgclark.vscode-todo-highlight"
