--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.68.2",
     "@hookform/resolvers": "^2.8.8",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "@types/styled-components-react-native": "^5.1.3",
     "appcenter": "4.4.3",
     "appcenter-analytics": "4.4.3",
     "appcenter-crashes": "4.4.3",
     "axios": "^0.26.1",
     "luxon": "^2.3.1",
     "patch-package": "^6.4.7",
+    "react": "17.0.2",
     "react-hook-form": "^7.29.0",
+    "react-native": "0.68.2",
     "react-native-device-info": "^8.7.1",
     "react-native-element-dropdown": "^1.8.10",
     "react-native-mask-text": "^0.7.0",
@@ -44,23 +45,25 @@
     "@testing-library/react-native": "^9.1.0",
     "@types/jest": "^27.4.1",
     "@types/luxon": "^2.3.1",
+    "@types/react-native": "^0.67.3",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
-    "@types/react-native": "^0.67.3",
+    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.67.0",
-    "react-test-renderer": "17.0.2",
-    "typescript": "^4.4.4",
     "eslint-plugin-prefer-arrow-functions": "^3.1.4",
+    "jest": "^26.6.3",
     "jest-mock": "^27.5.1",
     "jest-styled-components": "^7.0.8",
+    "metro-react-native-babel-preset": "^0.67.0",
     "mock-async-storage": "^2.2.0",
+    "react-native-bootsplash": "^4.1.4",
     "react-native-dotenv": "^3.3.1",
-    "react-native-bootsplash": "^4.1.4"
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.4.4"
   },
   "resolutions": {
     "@types/react": "^17"
