--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "9.1.0",
+    "react-native-gesture-handler": "^2.3.2",
+    "react-native-safe-area-context": "^4.2.4",
     "styled-components": "^5.3.5",
     "yup": "^0.32.11"
   },
