--- a/package.json
+++ b/package.json
@@ -28,15 +28,17 @@
     "react-native": "0.68.2",
     "react-native-device-info": "^8.7.1",
     "react-native-element-dropdown": "^1.8.10",
+    "react-native-gesture-handler": "^2.3.2",
     "react-native-mask-text": "^0.7.0",
     "react-native-paper": "^4.12.0",
+    "react-native-safe-area-context": "^4.2.4",
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-tiny-toast": "^1.0.7",
     "react-native-vector-icons": "9.1.0",
-    "react-native-gesture-handler": "^2.3.2",
-    "react-native-safe-area-context": "^4.2.4",
     "styled-components": "^5.3.5",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "react-native-screens": "^3.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
