--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "react-native-mask-text": "^0.7.0",
     "react-native-paper": "^4.12.0",
     "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tiny-toast": "^1.0.7",
     "react-native-vector-icons": "9.1.0",
     "styled-components": "^5.3.5",
-    "yup": "^0.32.11",
-    "react-native-screens": "^3.13.1"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -55,11 +55,11 @@
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.5.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-prefer-arrow-functions": "^3.1.4",
-    "jest": "^26.6.3",
+    "jest": "^27.5.1",
     "jest-mock": "^27.5.1",
     "jest-styled-components": "^7.0.8",
     "metro-react-native-babel-preset": "^0.67.0",
