--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,23 +12,18 @@ target 'Template' do
 
   use_react_native!(
     :path => config[:reactNativePath],
-    # to enable hermes on iOS, change `false` to `true` and then install pods
     :hermes_enabled => flags[:hermes_enabled],
     :fabric_enabled => flags[:fabric_enabled],
-    # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
   target 'TemplateTests' do
     inherit! :complete
-    # Pods for testing
   end
 
-  # Enables Flipper.
-  #
-  # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable the next line.
-  use_flipper!()
+  if "development" == ENV['RN_ENV']
+    use_flipper!()
+  end
 
   post_install do |installer|
     react_native_post_install(installer)
