--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "react-native": "0.68.2",
     "react-native-device-info": "^8.7.1",
     "react-native-element-dropdown": "^1.8.10",
-    "react-native-gesture-handler": "^2.3.2",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-mask-text": "^0.7.0",
     "react-native-paper": "^4.12.0",
+    "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
