--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template",
+  "name": "Template",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -23,13 +23,14 @@
     "axios": "^0.26.1",
     "luxon": "^2.3.1",
     "patch-package": "^6.4.7",
-    "react": "17.0.2",
+    "react": "18.1.0",
     "react-hook-form": "^7.29.0",
-    "react-native": "0.68.2",
+    "react-native": "0.70.1",
     "react-native-device-info": "^8.7.1",
     "react-native-element-dropdown": "^2.3.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-mask-input": "^1.2.1",
     "react-native-mask-text": "^0.7.0",
     "react-native-paper": "^4.12.0",
     "react-native-reanimated": "^2.9.1",
@@ -38,7 +39,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "9.1.0",
-    "styled-components": "^5.3.5",
+    "styled-components": "^5.3.6",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -63,11 +64,11 @@
     "jest": "^27.5.1",
     "jest-mock": "^27.5.1",
     "jest-styled-components": "^7.0.8",
-    "metro-react-native-babel-preset": "^0.67.0",
+    "metro-react-native-babel-preset": "^0.72.1",
     "mock-async-storage": "^2.2.0",
     "react-native-bootsplash": "^4.1.4",
     "react-native-dotenv": "^3.3.1",
-    "react-test-renderer": "17.0.2",
+    "react-test-renderer": "18.1.0",
     "typescript": "^4.4.4"
   },
   "resolutions": {
