--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,10 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '11.0'
+platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
+
+isProduction = ENV['RN_ENV'] != "development"
 
 target 'Template' do
   config = use_native_modules!
@@ -12,8 +14,10 @@ target 'Template' do
 
   use_react_native!(
     :path => config[:reactNativePath],
-    :hermes_enabled => flags[:hermes_enabled],
+     
+    :hermes_enabled => true,
     :fabric_enabled => flags[:fabric_enabled],
+    :flipper_configuration => isProduction ? FlipperConfiguration.disabled : FlipperConfiguration.enabled,
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
@@ -26,7 +30,12 @@ target 'Template' do
   end
 
   post_install do |installer|
-    react_native_post_install(installer)
+    react_native_post_install(
+      installer,
+      # Set `mac_catalyst_enabled` to `true` in order to apply patches
+      # necessary for Mac Catalyst builds
+      :mac_catalyst_enabled => false
+    )
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
