--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "mock-async-storage": "^2.2.0",
     "react-native-bootsplash": "^4.1.4",
     "react-native-dotenv": "^3.3.1",
-    "react-test-renderer": "18.1.0",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^4.4.4"
   },
   "resolutions": {
