--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "@types/react": "^18.0.21",
     "@types/styled-components-react-native": "^5.1.3",
-    "appcenter": "4.4.3",
-    "appcenter-analytics": "4.4.3",
-    "appcenter-crashes": "4.4.3",
+    "appcenter": "^4.4.5",
+    "appcenter-analytics": "^4.4.5",
+    "appcenter-crashes": "^4.4.5",
     "axios": "^0.26.1",
     "luxon": "^2.3.1",
     "patch-package": "^6.4.7",
@@ -34,7 +35,7 @@
     "react-native-paper": "^4.12.0",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "^3.13.1",
+    "react-native-screens": "^3.17.0",
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "9.1.0",
@@ -67,7 +68,6 @@
     "mock-async-storage": "^2.2.0",
     "react-native-bootsplash": "^4.1.4",
     "react-native-dotenv": "^3.3.1",
-    "react-test-renderer": "^18.2.0",
     "typescript": "^4.4.4"
   },
   "resolutions": {
