feat: create feature flags system to mobile apps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "paths": {
       "@assets/*": ["./src/assets/*"],
       "@components/*": ["./src/components/*"],
+      "@configs/*": ["./src/configs/*"],
       "@contexts/*": ["./src/contexts/*"],
       "@theme/*": ["./src/theme/*"],
       "@typings/*": ["./src/typings/*"],
