feat: create pipeline to Gitlab

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
-    "test:coverage": "jest  --coverage --watchAll=false",
+    "test": "cross-env TZ=America/Sao_Paulo jest",
+    "test:coverage": "cross-env TZ=America/Sao_Paulo jest  --coverage --watchAll=false",
+    "test:ci": "cross-env TZ=America/Sao_Paulo jest --coverage --watchAll=false --reporters=default --reporters=jest-junit --silent",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "postinstall": "patch-package",
     "ts-check": "tsc -p tsconfig.json"
@@ -59,9 +60,11 @@
     "@typescript-eslint/parser": "^5.17.0",
     "babel-jest": "^27.5.1",
     "babel-plugin-module-resolver": "^4.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-prefer-arrow-functions": "^3.1.4",
     "jest": "^27.5.1",
+    "jest-junit": "^15.0.0",
     "jest-mock": "^27.5.1",
     "jest-styled-components": "^7.0.8",
     "metro-react-native-babel-preset": "^0.72.1",
