upgrade: upgrade react-native for 0.71.1

--- a/.gitignore
+++ b/.gitignore
@@ -38,12 +38,6 @@ node_modules/
 npm-debug.log
 yarn-error.log
 
-# BUCK
-buck-out/
-\.buckd/
-*.keystore
-!debug.keystore
-
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
@@ -62,6 +56,9 @@ buck-out/
 /ios/Pods/
 /vendor/bundle/
 
+# Temporary files created by Metro to check the health of the file watcher
+.metro-health-check*
+
 # Environment files
 .env
 .env.*
@@ -71,3 +68,4 @@ buck-out/
 # Coverage
 /coverage
 junit.xml
+
