--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "axios": "^0.26.1",
     "luxon": "^2.3.1",
     "patch-package": "^6.4.7",
-    "react": "18.1.0",
+    "react": "18.2.0",
     "react-hook-form": "^7.29.0",
-    "react-native": "0.70.1",
+    "react-native": "0.71.2",
     "react-native-device-info": "^8.7.1",
     "react-native-element-dropdown": "^2.3.0",
     "react-native-gesture-handler": "^2.5.0",
@@ -44,14 +44,16 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@babel/core": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@testing-library/jest-native": "^4.0.4",
     "@testing-library/react-hooks": "^8.0.0",
     "@testing-library/react-native": "^9.1.0",
-    "@types/jest": "^27.4.1",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.1",
     "@types/luxon": "^2.3.1",
+    "@types/react": "^18.0.24",
     "@types/react-native": "^0.67.3",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^18.0.0",
@@ -69,10 +71,11 @@
     "jest-styled-components": "^7.0.8",
     "metro-react-native-babel-preset": "^0.72.1",
     "mock-async-storage": "^2.2.0",
+    "prettier": "^2.4.1",
     "react-native-bootsplash": "^4.1.4",
     "react-native-dotenv": "^3.3.1",
     "react-test-renderer": "^18.2.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.8.4"
   },
   "resolutions": {
     "@types/react": "^17"
