--- a/ios/Template.xcodeproj/xcshareddata/xcschemes/Template.xcscheme
+++ b/ios/Template.xcodeproj/xcshareddata/xcschemes/Template.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "AppTemplate.app"
-               BlueprintName = "AppTemplate"
-               ReferencedContainer = "container:AppTemplate.xcodeproj">
+               BuildableName = "Template.app"
+               BlueprintName = "Template"
+               ReferencedContainer = "container:Template.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "AppTemplateTests.xctest"
-               BlueprintName = "AppTemplateTests"
-               ReferencedContainer = "container:AppTemplate.xcodeproj">
+               BuildableName = "TemplateTests.xctest"
+               BlueprintName = "TemplateTests"
+               ReferencedContainer = "container:Template.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AppTemplate.app"
-            BlueprintName = "AppTemplate"
-            ReferencedContainer = "container:AppTemplate.xcodeproj">
+            BuildableName = "Template.app"
+            BlueprintName = "Template"
+            ReferencedContainer = "container:Template.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AppTemplate.app"
-            BlueprintName = "AppTemplate"
-            ReferencedContainer = "container:AppTemplate.xcodeproj">
+            BuildableName = "Template.app"
+            BlueprintName = "Template"
+            ReferencedContainer = "container:Template.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
