--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ buck-out/
 # Coverage
 /coverage
 junit.xml
+
+# Temporary files created by Metro to check the health of the file watcher
+.metro-health-check*
