--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "patch-package": "^6.5.1",
     "react": "18.1.0",
     "react-hook-form": "^7.29.0",
-    "react-native": "0.70.7",
+    "react-native": "0.70.8",
     "react-native-device-info": "^8.7.1",
     "react-native-element-dropdown": "^2.3.0",
     "react-native-gesture-handler": "^2.5.0",
@@ -44,7 +44,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/runtime": "^7.21.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "@styled/typescript-styled-plugin": "^0.20.0",
     "@testing-library/jest-native": "^4.0.4",
@@ -67,7 +68,7 @@
     "jest-junit": "^15.0.0",
     "jest-mock": "^27.5.1",
     "jest-styled-components": "^7.0.8",
-    "metro-react-native-babel-preset": "^0.72.3",
+    "metro-react-native-babel-preset": "0.72.3",
     "mock-async-storage": "^2.2.0",
     "react-native-bootsplash": "^4.1.4",
     "react-native-dotenv": "^3.3.1",
