--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
+    "eslint-import-resolver-typescript": "^3.5.4",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prefer-arrow-functions": "^3.1.4",
     "jest": "^27.5.1",
     "jest-junit": "^15.0.0",
