feat: create new fork in arch to hooks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "@components/*": ["./src/components/*"],
       "@configs/*": ["./src/configs/*"],
       "@contexts/*": ["./src/contexts/*"],
+      "@hooks/*": ["./src/hooks/*"],
       "@theme/*": ["./src/theme/*"],
       "@typings/*": ["./src/typings/*"],
       "@routes/*": ["./src/routes/*"],
